--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <body>
 <center>
-<h1> Welcome to my first website that I coded!</h1?
+<h1> Welcome to my first website that I coded!</h1>
 </center>
 </body>
 
